# CPP_labs_4th_course

./: CMakeLists.txt  README.md  README_EN.md  mysterious_heap.cpp
Assignment2_v5(uncomplete)_Priymak_KA13/: README_EN.md  README_UA.md  crc32.h  finalize_the_file.py
assignment1_v4_Priymak_KA13/task0/: README_EN.md  README_UKR.md  setup.py
assignment1_v4_Priymak_KA13/task0/my_new_vm.egg-info/: PKG-INFO  SOURCES.txt
assignment1_v4_Priymak_KA13/task0/my_vm/: __init__.py  vm.py
assignment1_v4_Priymak_KA13/task0/tests/: test_part1.py  test_part2.py  test_part3.py  test_part4.py  test_part5.py  test_part5_code.json  test_part5_code_p1.json  test_part5_code_p2.json
assignment1_v4_Priymak_KA13/task1/: README_EN.md  README_UKR.md  part1_if_loop_counter.py  part2_recusion_detector.py  part3_constexpr.py
